test/invalid-semantic/58170_typeMismatch/typeMismatch.agu
-- Author: 58170, Guilherme Sousa

let main : Unit =
  let x : Int = "Hello";
  print(x)